fix gap error at 207

--- a/style.css
+++ b/style.css
@@ -204,7 +204,7 @@ padding-bottom: 50px;
   align-items: center;
   justify-content: space-around;
   padding: 20px 50px 20px 50px ;
-  gap: ;
+  gap:10px ;
 }
 
 .container .left{
